css/style.css
/********************** Reusable css ******************************/
.float-start {
    float: left;
}

.justify-self-right {
    justify-content: end;
}

.section-title {
    font-size: 2rem;
    text-align: center;
    margin-bottom: 50px; }

/********************** Html/Body ******************************/
body{
    margin: 0;
}

html {
    overflow-y: scroll;
    scroll-behavior: smooth;
    font-family: "Roboto Thin", sans-serif;
    color: #333;
}
/********************** Navbar ******************************/
nav {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    overflow: hidden;
    background-color: #333;
    padding: 1rem 2rem;
}
nav ul {
    display: flex;
    list-style-type: none;
    margin: 0;
    padding: 0;
    align-items: center;
}

nav a img {
    height: auto;
    width: 100%;
}

nav li a {
    display: block;
    color: white;
    text-decoration: none;
    margin-left: 2rem;
    font-size: larger;
}

/* Change the link color to #111 (black) on hover */
li a:hover {
    text-decoration: underline;
    text-decoration-thickness: 0.125rem;
}

.container {
    max-width: 100%;
    margin: 0 auto;
    padding: 0 4rem 4rem;
}

#home-title{
    text-align: center !important;
    font-weight: bolder;
    font-size: 5rem;
    margin-bottom: 2rem;
}

#hero {
    display:grid;
    justify-content: center;

    width: 100%;
    height: 35rem;
    position: relative;
    overflow-x: hidden;
    overflow-y: hidden;
    padding-bottom: 0;
    background-image: url("https://img.freepik.com/free-photo/beautiful-shot-sea-with-mountain-distance-clear-sky_181624-2248.jpg?w=2000");
    background-size: cover;
    background-position: center;

}
/**********************assignment******************************/
#assigment-description{
    margin-top: 2rem;
    display: flex;
    justify-content: center;
}

#assigment-description p{
text-align: center;
    font-size: 1.1rem;
max-width: 64rem;
    letter-spacing: 2px;
}

/**********************about-us******************************/

#about-us .section-title{
    margin-top: 0;
    font-size: 2rem;
    margin-bottom: -1rem;
    text-align: center;
    color: #333;
}

#about-us{
    margin-bottom: -15rem;
}
.about-grid{
    display: flex;
    justify-content: center;
    flex-wrap: wrap;
}

.about-us-image {
    display: block;
    margin:1rem 6rem;
    width: 250px;
    max-width: 100%;
    height: 250px;
    border-radius: 50%;
    object-fit: cover;
}
.about-us-name{
    text-align: center !important;
    font-weight: bolder;
    font-size: 1.7rem;
    margin-bottom: 1.2rem;
}
/**********************social-media******************************/
.social-menu ul{
    position: relative;
    display: flex;
    text-align: center;
    justify-content: center;
    padding-bottom: 10%;
    padding-left: 0;
    z-index: 10;
}

.social-menu ul li{
    list-style: none;
    margin: 0.5rem 0.5rem;
    display: inline-block;
}

.social-menu ul li .fab{
    font-size: 2em;
    line-height: 60px;
    transition: 0.3s;
    color: #000;
}

.social-menu ul li .fab:hover{
    color: #fff;
}

.social-menu ul li a{
    left: 100%;
    display: block;
    width: 4rem;
    border-radius: 50%;
    background-color:papayawhip;
    justify-content: center;
    text-align: center;
    transition: 0.6s;
    box-shadow: 0 5px 4px rgba(0,0,0,.5);
}

.social-menu ul li a:hover{
    transform: translate(0, -10%);
}

.social-menu ul li:nth-child(1) a:hover{
    background-color: rgba(0, 0, 0, 0.829);
}
.social-menu ul li:nth-child(2) a:hover{
    background-color: #0077b5;
}

/**********************footer******************************/
footer {
    display: flex;
    flex-direction: row;
    justify-content: center;
    background-color: #333;
    color: white;
    padding-top: 1rem;
    padding-bottom: 1rem;
}

footer p {
    margin: 0.25rem auto;
}

.divider {
    width: 100%;
}

.row{
    width:100%;
    padding:0;
    margin:0;
    display: flex;
    justify-content: center;
    flex-direction: column;
    position:relative;
}

.vertical {
    margin: 0 4rem;
    height: auto;
    border-left: thick solid #ffffff;
}

footer img {
    height: 3rem;
    align-self: center;
}

